--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.17.12",
+    "bootstrap": "^4.6.2",
+    "csv": "^6.3.5",
+    "html-react-parser": "5.0.6",
     "react": "18.2.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^4.4.1",
-    "html-react-parser": "5.0.6",
-    "bootstrap": "^4.6.2",
-    "react-bootstrap": "^1.6.6"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
