--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "html-react-parser": "5.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.6",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^4.4.1"
