--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
