--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@elastic/elasticsearch": "^7.17.12",
     "bootstrap": "^4.6.2",
     "csv": "^6.3.5",
+    "elasticdump": "^6.110.0",
     "html-react-parser": "5.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.6",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-scripts": "5.0.1",
     "styled-components": "^4.4.1",
     "uuid": "^9.0.1"
