--- a/gpt2/requirements.txt
+++ b/gpt2/requirements.txt
@@ -9,30 +9,28 @@ fsspec==2023.12.2
 gast==0.5.4
 gensim==4.3.2
 google-auth==2.25.2
-google-auth-oauthlib==1.2.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.60.0
 h5py==3.10.0
 huggingface-hub==0.20.1
 idna==3.6
-keras==2.15.0
+keras==2.14.0
 libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 ml-dtypes==0.2.0
 numpy==1.26.2
-nvidia-cublas-cu12==12.2.5.6
-nvidia-cuda-cupti-cu12==12.2.142
-nvidia-cuda-nvcc-cu12==12.2.140
-nvidia-cuda-nvrtc-cu12==12.2.140
-nvidia-cuda-runtime-cu12==12.2.140
-nvidia-cudnn-cu12==8.9.4.25
-nvidia-cufft-cu12==11.0.8.103
-nvidia-curand-cu12==10.3.3.141
-nvidia-cusolver-cu12==11.5.2.141
-nvidia-cusparse-cu12==12.1.2.141
-nvidia-nccl-cu12==2.16.5
-nvidia-nvjitlink-cu12==12.2.140
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-nvcc-cu11==11.8.89
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cudnn-cu11==8.7.0.84
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-nccl-cu11==2.16.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
@@ -48,16 +46,17 @@ safetensors==0.4.1
 scipy==1.11.4
 six==1.16.0
 smart-open==6.4.0
-tensorboard==2.15.1
+tensorboard==2.14.1
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0.post1
-tensorflow-estimator==2.15.0
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
 tensorflow-io-gcs-filesystem==0.35.0
+tensorrt==8.5.3.1
 termcolor==2.4.0
 tokenizers==0.15.0
 tqdm==4.66.1
 transformers==4.36.2
-typing-extensions==4.9.0
+typing_extensions==4.9.0
 urllib3==2.1.0
-werkzeug==3.0.1
+Werkzeug==3.0.1
 wrapt==1.14.1
